# beacon-blockhash-verifier

./: .env.example  .gitignore  .gitmodules  README.md  remappings.txt
.github/workflows/: checks.yml  crates.yml  foundry.yml
contracts/: .env.example  foundry.toml
contracts/proofs/: 1.json  2.json  Current.json  Historical.json  RecentHistorical.json
contracts/src/: BeaconBlockhashVerifier.sol
contracts/test/: BeaconBlockhashVerifier.t.sol
crates/: Cargo.toml
crates/eth_proof_backend/: .env.example  Cargo.toml
crates/eth_proof_backend/src/: chains.rs  error.rs  lib.rs  main.rs  utils.rs
crates/eth_proofs/: .env.example  Cargo.toml
crates/eth_proofs/src/: config.rs  error.rs  lib.rs  lighthouse_prover_client.rs  proofs.rs  test.rs  types.rs  utils.rs
src/: BeaconBlockhash.sol  BeaconBlockhashVerifier.sol
test/: BeaconBlockhash.t.sol
