[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
exclude = [".github/"]

[workspace]
members = ["eth_proofs/", "eth_proof_backend/"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
alloy-primitives = "0.7.7"
alloy-provider = "0.2.1"
alloy-rpc-client = { version = "0.2.1", default-features = false }
alloy-rpc-types-eth = { version = "0.2.1", default-features = false }
op-alloy-network = "0.1.5"
serde = "1.0.201"
serde_json = "1.0.117"
thiserror = "1.0.63"
tokio = "1.29.1"
url = "2.5.2"
