[package]
name = "eth-proofs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true

[dependencies]
alloy-consensus = { version = "0.2.1", default-features = false, features = [
    "k256",
    "kzg",
] }
alloy-json-rpc = { version = "0.2.1", default-features = false }
alloy-network = { version = "0.2.1", default-features = false }
alloy-rlp = "0.3.8"
alloy-transport = { version = "0.2.1", default-features = false }
async-trait = "0.1.81"
beacon_api_client = { git = "https://github.com/ralexstokes/ethereum-consensus.git", branch = "main", package = "beacon-api-client" }
ethereum_consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git", branch = "main", package = "ethereum-consensus" }
reqwest = { version = "0.12", features = ["json"] }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "84ef2b71aa004f6767420badb42c902ad56b8b72" }

alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
op-alloy-network.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
